--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
-name: flutter_animated_dialog
+name: flutter_animated_dialog_updated
 description: A new Flutter dialog with a series of beautiful animations, slide fade rotate size scale rotate3D animations.
-version: 1.2.0
+version: 1.0.0
 homepage: https://github.com/gbcoder794/flutter_animated_dialog
 email: gbcoder794@gmail.com
 
